# IntelHexParser

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GIT_SETUP.md  IntelHexViewer.spec  LICENSE  README.md  build_binary.py  build_linux.sh  build_windows.bat  hex_16byte_table.csv  hex_viewer.py  hex_viewer_full.py  input.hex  main.py  main_gui.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: README.md  basic_usage.py  sample.hex
intelhex_viewer/: __init__.py  gui_components.py  hex_parser.py  main_app.py  structure_parser.py  symbol_manager.py
tests/: __init__.py  test_hex_parser.py
