[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intel-hex-viewer"
description = "A comprehensive GUI application for viewing and analyzing Intel HEX files"
authors = [
    {name = "Intel HEX Viewer Contributors", email = "contributors@intelhex-viewer.org"}
]
maintainers = [
    {name = "Intel HEX Viewer Contributors", email = "contributors@intelhex-viewer.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
]
keywords = ["intel", "hex", "firmware", "embedded", "systems", "gui", "viewer", "analyzer"]
dependencies = [
    "intelhex>=2.3.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/contributors/intel-hex-viewer"
Repository = "https://github.com/contributors/intel-hex-viewer"
Documentation = "https://github.com/contributors/intel-hex-viewer/blob/main/README.md"
"Bug Reports" = "https://github.com/contributors/intel-hex-viewer/issues"
Contributing = "https://github.com/contributors/intel-hex-viewer/blob/main/CONTRIBUTING.md"
Changelog = "https://github.com/contributors/intel-hex-viewer/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "pytest-mock>=3.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "isort>=5.0.0",
    "mypy>=0.800",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
    "pre-commit>=2.15.0",
    "tox>=3.20.0",
]
build = [
    "pyinstaller>=4.0",
    "wheel>=0.36.0",
    "twine>=3.4.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
    "myst-parser>=0.15.0",
]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "pytest-mock>=3.0.0",
]

[project.scripts]
intel-hex-viewer = "intelhex_viewer.main_app:main"
hex-viewer = "intelhex_viewer.main_app:main"

[project.gui-scripts]
intel-hex-viewer-gui = "intelhex_viewer.main_app:main"

[tool.setuptools.dynamic]
version = {attr = "intelhex_viewer.__version__"}

[tool.setuptools.packages.find]
include = ["intelhex_viewer*"]

[tool.setuptools.package-data]
intelhex_viewer = ["*.txt", "*.md"]

[tool.black]
line-length = 88
target-version = ["py36"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | examples
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["intelhex_viewer"]
src_paths = ["intelhex_viewer", "tests"]

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["intelhex.*", "tkinter.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gui: marks tests as GUI tests",
]

[tool.coverage.run]
source = ["intelhex_viewer"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "examples",
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:F401,F811",
] 